[tool.poetry]
name = "aws-rawcoffee"
version = "0.1.0"
description = ""
authors = ["Hannes Aronsson <hannesaronsson@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
polars = "^1.7.1"
streamlit = "^1.38.0"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
